# craftflow

./: .gitignore  ARCHITECTURE.md  Cargo.toml  NOTES.md  README.md
.cargo/: config.toml
closureslop/: Cargo.toml
closureslop/src/: event.rs  lib.rs  macroslop.rs  reactor.rs  tests.rs
closureslop/src/reactor/: callbacks.rs
closureslop/tests/: proc_macro_test.rs
craftflow/: Cargo.toml
craftflow-nbt/: Cargo.toml  README.md  shared.rs
craftflow-nbt/benches/: criterion.rs  perf.rs  roundtrip_dynamic.rs
craftflow-nbt/src/: abstr_bytes.rs  arrays.rs  bytes_abstr.rs  byteswap.rs  casts.rs  de.rs  dynamic.rs  error.rs  internal.rs  lib.rs  macro.rs  nbt.rs  nbt_bytes.rs  nbt_format.rs  nbtstring.rs  nbtvalue.rs  primitive.rs  ser.rs  tag.rs  tests.rs  value.rs
craftflow-nbt/src-old/: arrays.rs
craftflow-nbt/src-old/dynamic/: dyn_macro.rs
craftflow-nbt/src-old2/: error.rs  nbt_bytes.rs  tag.rs
craftflow-nbt/src-old2/nbt_bytes/: primitives.rs  seq.rs  string.rs
craftflow-nbt/src-old2/value/nbtseq/: sized.rs
craftflow-nbt/src-old2/value/nbtseq/unsized/: seq_nbtseq.rs
craftflow-nbt/src/de/: any.rs  array_enum.rs  compound.rs  read_ext.rs  seq.rs
craftflow-nbt/src/dynamic/: dyn_macro.rs
craftflow-nbt/src/internal/: nbtstr.rs  read.rs  swap_endian.rs  write.rs
craftflow-nbt/src/nbt/: primitives.rs  seq.rs  string.rs
craftflow-nbt/src/nbt_bytes/: string.rs
craftflow-nbt/src/ser/: any.rs  compound.rs  compound_key.rs  seq.rs  string.rs  tag.rs  write_str.rs
craftflow-nbt/src/value/: nbtarray.rs  nbtlist.rs  nbtseq.rs  nbtstring.rs
craftflow-nbt/src/value/nbtseq/: unsized.rs
craftflow-nbt/src/value/nbtseq/unsized/: seq_nbtstring.rs
craftflow-nbt/tests/: big_roundtrip_dynamic.rs  derive.rs  roundtrip.rs
craftflow-protocol/: Cargo.toml  build.rs  packets.toml  protocol.ron  test
craftflow-protocol-abstract/: Cargo.toml
craftflow-protocol-abstract/assets/: default_registry.json
craftflow-protocol-abstract/src/: c2s.rs  direction_macro.rs  lib.rs  packet_constructor.rs  packet_new.rs  packet_write.rs  s2c.rs
craftflow-protocol-abstract/src/c2s/: client_settings.rs  conf_finish.rs  conf_keepalive.rs  conf_plugin.rs  conf_pong.rs  conf_resource_pack_response.rs  handshake.rs  login_acknowledge.rs  login_encryption.rs  login_plugin.rs  login_start.rs  status_ping.rs  status_request_info.rs
craftflow-protocol-abstract/src/s2c/: conf_add_resource_pack.rs  conf_disconnect.rs  conf_feature_flags.rs  conf_finish.rs  conf_keepalive.rs  conf_ping.rs  conf_plugin.rs  conf_registry.rs  conf_remove_resource_pack.rs  conf_reset_chat.rs  conf_tags.rs  disconnect.rs  login_compress.rs  login_disconnect.rs  login_encryption_begin.rs  login_plugin.rs  login_success.rs  status_info.rs  status_pong.rs
craftflow-protocol-core/: Cargo.toml
craftflow-protocol-core/src/: error.rs  lib.rs
craftflow-protocol-core/src/common_structures/: text.rs
craftflow-protocol-core/src/datatypes/: array.rs  bool.rs  boxed_slice.rs  buffer.rs  float.rs  integers.rs  json.rs  mod.rs  nbt.rs  option.rs  position.rs  rest_buffer.rs  string.rs  text.rs  top_bit_set_array.rs  tuples.rs  varint.rs  varlong.rs  vec.rs
craftflow-protocol-core/src/datatypes/text/: macros.rs
craftflow-protocol-core/src/old/common_structures/: text.rs
craftflow-protocol-core/src/old/datatypes/: bool.rs  string.rs
craftflow-protocol/codegen/: features  states
craftflow-protocol/codegen/packets/: handshake
craftflow-protocol/generator/: conf.py  example_spec.json  find_all_versions.py  gen_packets.py  gen_types.py  llm.py  load_protocols.py  main.py  parse_protocol.py  prompt.py  pyproject.toml
craftflow-protocol/packets/: format.ron
craftflow-protocol/packets/c2s/: configuration.ron  handshake.ron  login.ron  play.ron  status.ron
craftflow-protocol/packets/c2s/configuration/finish_configuration/: v764.rs
craftflow-protocol/packets/c2s/configuration/keep_alive/: v764.rs
craftflow-protocol/packets/s2c/: configuration.ron  login.ron  play.ron  status.ron
craftflow-protocol/src/: define_type_macro.rs  error.rs  generator.rs  handshake.rs  legacy.rs  lib.rs  limits.rs  mcp_macro.rs  packet_eat.rs  packets.rs  protocol.rs  stable_packets.rs  text.rs
craftflow-protocol/src/datatypes/: array.rs  bool.rs  boxed_slice.rs  buffer.rs  byte_array.rs  float.rs  integers.rs  json.rs  mod.rs  nbt.rs  option.rs  position.rs  primitives.rs  rest_buffer.rs  seq.rs  string.rs  text.rs  tuples.rs  varint.rs  varlong.rs  vec.rs
craftflow-protocol/src/datatypes/text/: macros.rs
craftflow-protocol/src/macros/: impl_mcp_traits.rs  mcp_struct.rs  mod.rs  varint_enum.rs
craftflow-protocol/src/packets/: configuration.rs  handshake.rs  legacy.rs  login.rs  mod.rs  old_mod.rs  status.rs
craftflow-protocol/src/serde_types/: status_response.rs
craftflow-protocol/src/stable_packets/c2s/: handshake.rs  legacy.rs  mod.rs  status.rs
craftflow-protocol/src/stable_packets/s2c/: legacy.rs  mod.rs  status.rs
craftflow-protocol/tests/: disabled_versions_macro.rs
craftflow-protocol/types/tags/: v477.rs
craftflow/src/: connection.rs  connection_handle.rs  lib.rs  listener.rs  modules.rs  packet_events.rs  packets.rs  reactor.rs  read_varint.rs  various_events.rs
craftflow/src/connection/: add.rs  common.rs  connection_task.rs  legacy.rs  packet_reader.rs  packet_writer.rs
craftflow/src/connection/connection_task/: reader.rs  writer.rs
craftflow/src/connection/legacy/: response.rs
craftflow/src/connection_handle/: compression.rs  connection_task.rs  encryption.rs  legacy.rs  packet_reader.rs  packet_writer.rs  reader.rs  writer.rs
craftflow/src/reactor/: event.rs  handle_macro.rs
example/: Cargo.toml
example/src/: main.rs
modules/login/: Cargo.toml
modules/login/src/: configuration.rs  default_registry.rs  encryption_response.rs  known_packs.rs  lib.rs  login_start.rs  set_compression.rs
modules/luau-mods/: Cargo.toml
modules/luau-mods/src/: builder.rs  lib.rs
modules/simple-ping/: Cargo.toml
modules/simple-ping/src/: legacy_ping.rs  lib.rs  ping.rs  status.rs
(+473 files in other folders)
