[workspace]
members = [
	"closureslop",
	"closureslop-macros",
	"craftflow",
	"craftflow-macros",
	"craftflow-nbt",
	"craftflow-protocol-abstract",
	"craftflow-protocol-core",
	"craftflow-protocol-versions",
	"example",
	"modules/*",
]
resolver = "2"

[workspace.dependencies]
shallowclone = { git = "https://github.com/PonasKovas/shallowclone.git" }
anyhow = "1.0.86"
byteorder = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.8.4"
cfb8 = "0.8.1"
flate2 = "1.0.33"
base64 = "0.22.1"
futures = "0.3.30"
thiserror = "1.0"
indexmap = "2.6"
proc-macro-error = "1.0"
is_type = "0.2.1"
smallbox = { version = "0.8.6", features = ["nightly"] }
simd_cesu8 = { version = "1.0.1", features = ["nightly"] }
bytes = "1.9.0"
bytemuck = { version = "1.21.0", features = ["latest_stable_rust", "nightly_portable_simd"] }

[profile.dev]
opt-level = 1
