[workspace]
members = [
	"closureslop",
	"closureslop-macros",
	"craftflow",
	"craftflow-macros",
	"craftflow-nbt",
	"craftflow-nbt-derive",
	"craftflow-protocol",
	"example",
	"modules/*",
]
resolver = "2"

[workspace.dependencies]
shallowclone = { git = "https://github.com/PonasKovas/shallowclone.git" }
anyhow = "1.0.86"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
aes = "0.8.4"
cfb8 = "0.8.1"
flate2 = "1.0.33"
base64 = "0.22.1"
futures = "0.3.30"
thiserror = "1.0"
indexmap = { version = "2.6", features = ["serde"] }
proc-macro-error = "1.0"
smallbox = { version = "0.8.6", features = ["nightly"] }
maxlen = "0.2.0"

[profile.dev]
opt-level = 1

[workspace.lints.clippy]
tabs_in_doc_comments = "allow"
type_complexity = "allow"