[package]
name = "craftflow-nbt"
version = "3.0.0"
edition = "2021"
description = "A based NBT (from Minecraft) binary format implementation"
repository = "https://github.com/PonasKovas/craftflow/tree/master/craftflow-nbt"
license = "MPL-2.0"

[dependencies]
craftflow-nbt-derive = { path = "../craftflow-nbt-derive/" }
thiserror = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, optional = true }
simd_cesu8 = { version = "1.0.1", features = ["nightly"] }
typenum = "1.18.0"
generic-array = "1.2.0"

[dev-dependencies]
hexdump = "0.1.2"

[features]
serde = ["dep:serde"]