[package]
name = "craftflow-nbt"
version = "3.0.0"
edition = "2021"
description = "A based NBT (from Minecraft) binary format implementation"
repository = "https://github.com/PonasKovas/craftflow/tree/master/craftflow-nbt"
license = "MPL-2.0"

[dependencies]
craftflow-nbt-derive = { path = "../craftflow-nbt-derive/" }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
simd_cesu8 = { version = "1.0.1" }
maxlen =  { workspace = true }

[dev-dependencies]
hexdump = "0.1.2"
criterion = "0.5.1"
rand = "0.9.0"
pprof = { version = "0.14", features = ["flamegraph"] }

[features]
serde = ["dep:serde"]
nightly = ["simd_cesu8/nightly"]

[[bench]]
name = "criterion"
harness = false
