[package]
name = "craftflow-protocol-abstract"
version = "0.1.0"
edition = "2021"

[dependencies]
craftflow-protocol-core = { path = "../craftflow-protocol-core" }
craftflow-protocol-versions = { path = "../craftflow-protocol-versions" }
craftflow-nbt = { path = "../craftflow-nbt" }
shallowclone = { path = "../shallowclone" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }
