[package]
name = "craftflow-protocol-core"
version = "0.1.0"
edition = "2021"

[dependencies]
craftflow-nbt = { path = "../craftflow-nbt" }
shallowclone = { workspace = true }
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
