[package]
name = "craftflow-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
syn = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
indexmap = { workspace = true }

[features]
extra_field_feature = []