[package]
name = "craftflow-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
ron = { workspace = true }
serde = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
indexmap = { workspace = true }

[features]
