[package]
name = "craftflow"
version = "0.1.0"
edition = "2021"

[dependencies]
craftflow-macros = { path = "../craftflow-macros" }
craftflow-protocol = { path = "../craftflow-protocol" }
closureslop = { path = "../closureslop" }
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
aes.workspace = true
cfb8.workspace = true
flate2.workspace = true
futures.workspace = true
smallbox.workspace = true

[lints]
workspace = true