[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
craftflow = { path = "../craftflow" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
simple-ping = { path = "../modules/simple-ping" }
login = { path = "../modules/login" }
