[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
craftflow = { path = "../craftflow" }
craftflow-protocol-core = { path = "../craftflow-protocol-core" }
craftflow-protocol-abstract = { path = "../craftflow-protocol-abstract" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
simple-ping = { path = "../modules/simple-ping" }
login = { path = "../modules/login" }
smallbox = { workspace = true }
