[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
craftflow = { path = "../craftflow" }
craftflow-protocol = { path = "../craftflow-protocol" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { workspace = true }
simple-ping = { path = "../modules/simple-ping" }
login = { path = "../modules/login" }
smallbox = { workspace = true }
text = { path = "../modules/text" }

[lints]
workspace = true
