[package]
name = "simple-ping"
version = "0.1.0"
edition = "2021"

[dependencies]
craftflow = { path = "../../craftflow/" }
craftflow-protocol-abstract = { path = "../../craftflow-protocol-abstract/" }
craftflow-protocol-core = { path = "../../craftflow-protocol-core/" }
base64 = { workspace = true }
serde_json = { workspace = true }
smallbox = { workspace = true }
