[package]
name = "simple-ping"
version = "0.1.0"
edition = "2021"

[dependencies]
craftflow = { path = "../../craftflow/" }
craftflow-protocol = { path = "../../craftflow-protocol/" }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
text = { path = "../text/" }

[lints]
workspace = true
